fix sonarqube warnings